--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,6 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          make dev-destroy token="$env:vault_token"
-        env:
-          vault_token: ${{ secrets.vault_token }}
+          make dev-destroy token=""
