--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,4 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          make dev-destroy token=""
+          make dev-destroy token="$vault_token"
+        env:
+           vault_token: ${{ secrets.vault_token }}
