--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -6,4 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          make dev-apply token=""
+          make dev-apply token="vault_token"
+        env:
+           vault_token: ${{ secrets.vault_token }}
