--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          make dev-apply token="vault_token"
+          make dev-apply vault_token="vault_token"
         env:
            vault_token: ${{ secrets.vault_token }}
