--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,5 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          make dev-destroy
+          make dev-destroy token="$env:vault_token"
+        env:
+          vault_token: ${{ secrets.vault_token }}
+
+
 
